--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* RESET */
 * {
     margin: 0;
     padding: 0;
@@ -10,12 +11,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f2f5;
+    background-color: #c7cfe9;
     flex-direction: row;
     gap: 40px;
     flex-wrap: nowrap;
 }
-
 
 .logo-container {
     height: 52%;
@@ -58,6 +58,8 @@ h2 {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     flex-grow: 1;
     margin-bottom: 20px;
+    top: -20px;
+    left: 7%;
 }
 
 .sh,
@@ -135,37 +137,35 @@ h2 {
 }
 
 .h4 {
-    width: 700px;
-    font-size: 18px;
+    width: 100%;
+    font-size: 14px;
     font-weight: 300;
     color: #070606;
+    position: relative;
     text-decoration: none;
     text-align: center;
-    margin-top: 50px;
-    white-space: pre-line;/
+    margin-top: 5px;
+    white-space: pre-line;
+    text-decoration: none;
+    left: 7%;
 }
 
-.h4-span {
-    display: block;
-    text-align: center;
+.h4 a {
+    text-decoration: none;
+    color: #1877f2; /* Azul padrão do Facebook, opcional */
+    font-weight: bold; /* Opcional para destacar */
 }
 
+/* MEDIA QUERIES */
 
+/* Tablets */
 @media (max-width: 943px) {
     .wrapper {
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         flex-direction: column;
-        position: relative;
         overflow: hidden;
-        /* Evita que elementos fiquem fora da tela */
     }
 
     .logo-container {
-        display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -173,85 +173,101 @@ h2 {
         margin-top: 2%;
     }
 
-    .logoFAc {
-        width: 200px;
-        height: 150px;
-        margin-bottom: -22%;
-        margin-top: -28%;
+    .logoFAc {   /* deixar "Logo"  face lado da tela de login */
+        width: 250px;
+        height: 240px;
+        margin-bottom: -20%;
+        margin-top: -18%;
     }
 
     h2 {
-     display: none;
+        display: none;
+    }
+
+    .caixinha {
+        width: 80%;
+        max-width: 90%;
+        padding: 35px 20px;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        margin: 0 auto;
+        top: -12%;
+        left: 0%;
+    }
+
+    .h4 {
+        font-size: 18px;
+        margin: 28px 0 0;
+        position: relative;
+        bottom: 40px; /* Faz o h4 subir */
+        color: #1c1e21;
+        font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
+        font-weight: normal;
+        text-align: center;
+        left: 0%;
+        text-decoration: none;
+
+    }
+    .h4 a {
+        text-decoration: none;
+        color: #1877f2; /* Azul padrão do Facebook, opcional */
+        font-weight: bold; /* Opcional para destacar */
+    }
+}
+
+/* Celulares pequenos */
+@media (max-width: 499px) {
+    .logoFAc {
+        width: 280px;
+        margin-bottom: 66%;
+    }
+}
+
+/* Celulares específicos (ex: Galaxy A12, Moto G) */
+@media (max-width: 412px) and (max-height: 915px) {
+    .logoFAc {
+        width: 320px;
+        height: 200px;
+        margin-bottom: -20%;
     }
 
     .caixinha {
         width: 90%;
-        /* Mantém a responsividade */
-        max-width: 380px;
-        padding: 35px 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        min-height: 200px;
-        position: relative;
-        margin: 0 auto;
-        top: -7%;
+        height: auto;
+        padding: 42px 20px;
+        margin-top: 150px;
+        top: -32%;
     }
-
-    .h4,
-    .h4-span {
-        display: inline;
-        /* Quebra corretamente sem precisar de <br> */
-        width: 100px;
-        align-items: center;
-        text-align: center;
-        font-size: 16px;
-
-    }
-}
-
-
-@media (max-width: 499px) {
-    .wrapper {
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-    }
-
-    .logoFAc {
-        width: 280px;
-        top: -50%;
-        margin-bottom: 66%;
-    }
-
-
-    .caixinha {
-        width: 100%;
-        max-width: 340px;
-        padding: 15px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        top: -85%;
-    }
-
     .sh,
     .em {
         height: 48px;
         font-size: 14px;
     }
+    
+    .h4 {
+        font-size: 18px;
+        margin: 28px 0 0;
+        position: relative;
+        bottom: 40px; /* Faz o h4 subir */
+        color: #1c1e21;
+        font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
+        font-weight: normal;
+        text-align: center;
+        left: 0%;
+        text-decoration: none;
+
+    }
+    .h4 a {
+        text-decoration: none;
+        color: #1877f2; /* Azul padrão do Facebook, opcional */
+        font-weight: bold; /* Opcional para destacar */
+    }
+
 
     .button,
     .new {
         height: 40px;
         font-size: 13px;
-    }
-
-    .h4 {
-        width: 100%;
-        font-size: 16px;
-        text-align: center;
     }
 }
